# legal-graph-rnd

./: .dockerignore  .env.example  .gitignore  .infisical.json  CORPUS_REFERENCE.md  Dockerfile  PROTOTYPE_REPORT.md  README.md  app.py  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
backend/: main.py  schemas.py
backend/db/: schema.sql
backend/middleware/: auth.py  observability.py
backend/routes/: auth.py  calculator.py  chat.py  chat_v2.py  compliance.py  explain.py  provision.py  settings.py
backend/services/: graph.py  llm.py
corpus/putusan/: parsed_results.json  seeds.json
corpus/validation/: calibration_sample.json
data/: legal.db
docs/: backend-spec.md  feature-spec.md  jurisprudence-rnd.md  legal-functions-taxonomy.md  prd.md  precedence-algorithm.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  observability.ts
frontend/src/api/: index.ts
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  QuickActions.tsx  ThreeSpaceResponse.tsx  ThreeSpaceSkeleton.tsx
frontend/src/components/headless/: index.ts  useEditCommit.ts  useLifecycle.ts  useNavigation.ts  (+1 more)
frontend/src/pages/: Calculator.tsx  Chat.tsx  ChatLab.tsx  Login.tsx  Settings.tsx
frontend/src/types/: index.ts
scripts/: batch_scrape_putusan.py  collect_phi_urls.py  collect_putusan.py  detect_stale_refs.py  fetch_corpus.py  fetch_pdf_nodriver.py  fetch_pdf_v2.py  inspect_html.py  inspect_pdf.py  migrate_norms.py  parse_putusan.py  reparse_corpus.py  run_compiler.py  scrape_putusan_nodriver.py  scrape_putusan_test.py  scrape_putusan_test2.py  scrape_putusan_test3.py  scrape_putusan_test4.py  seed_sqlite.py  validate_norms.py
src/compliance/: __init__.py  extraction_schemas.py  norm_compiler.py  obligations.py  obligations_pkwt.py  obligations_upah.py  pipeline.py  ump_2025.py
src/extraction/: __init__.py
src/graph/: __init__.py
src/parser/: __init__.py
src/schema/: __init__.py  regulation.py
tests/: test_compliance.py  test_parser.py  test_schema.py
(+4 files in other folders)
