[project]
name = "legal-graph-rnd"
version = "0.1.0"
description = "Indonesian Legal Knowledge Graph — structural parser and relationship graph"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "neo4j>=5.20.0",
    "jsonschema>=4.22.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
